--- a/disneyUniverse.css
+++ b/disneyUniverse.css
@@ -37,3 +37,33 @@ body {
   background-size: cover;
   min-height: 400px;
 }
+.container-grid {
+  display: grid;
+  max-width: 960px;
+  margin: 100px auto;
+  padding: 10px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+.box {
+  background-color: steelblue;
+  color: white;
+  font-size: 16px;
+  padding: 12px;
+  border: skyblue 1px solid;
+}
+.box > img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.box:nth-child(2) {
+  grid-column: 2 / 4;
+}
+.box:nth-child(4) {
+  grid-column: 2 / 4;
+}
+.box:nth-child(6) {
+  grid-column: 2 / 4;
+}
